--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI = "mongodb://127.0.0.1:27017/Coffee_Shop";
-# MONGODB_URI = "mongodb+srv://baongocta:baongocta@cluster0.poueqht.mongodb.net/directConnection=true"
+# MONGODB_URI = "mongodb://127.0.0.1:27017/Coffee_Shop";
+MONGODB_URI = "mongodb+srv://baongocta:baongocta@cluster0.poueqht.mongodb.net/Coffee_Shop";
