--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "nodemon index.js",
     "start:dev": "nodemon --inspect index.js"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
